Check verify status of drone delivery